--- a/templates/index.html
+++ b/templates/index.html
@@ -95,13 +95,13 @@
 <style>
     #map {
       width: 100%;
-      height: 95vh;
+      height: 80vh;
     }
   </style>
 <body>
 
 
-    <h1>Hello world</h1>
+    <h1>Sodesh properties</h1>
     <div id="map"></div>
 
 
@@ -120,7 +120,8 @@
         var darkLayer = L.tileLayer(
           "https://tiles.stadiamaps.com/tiles/alidade_smooth_dark/{z}/{x}/{y}{r}.png",
           {
-            maxZoom: 20,
+            maminZoom: 1,
+            xZoom: 20,
             attribution:
               '&copy; <a href="https://stadiamaps.com/">Stadia Maps</a>, &copy; <a href="https://openmaptiles.org/">OpenMapTiles</a> &copy; <a href="http://openstreetmap.org">OpenStreetMap</a> contributors',
           }
@@ -140,40 +141,40 @@
   
         var baseLayers = {
           osm: osm,
-          "dark map": darkLayer,
+          // dark: darkLayer,
           "water color map": watercolor,
         };
   
         osm.addTo(map);
         L.control.layers(baseLayers).addTo(map);
-
+// give color using code on this shape file
               //Geojson style function
-      function geojsonStyle(feature) {
-        return {
-          fillColor: getColor(feature.properties.adm1_en),
-          weight: 2,
-          opacity: 1,
-          color: "#5e380f",
-          fillOpacity: 0.7,
-        };
-      }
+      // function geojsonStyle(feature) {
+      //   return {
+      //     fillColor: getColor(feature.properties.adm1_en),
+      //     weight: 2,
+      //     opacity: 1,
+      //     color: "#5e380f",
+      //     fillOpacity: 0.7,
+      //   };
+      // }
 
-      //GetColor function
-      function getColor(adm1_en) {
-        if (adm1_en == "Dhaka") {
-          return "#008080";
-        } else if (adm1_en == "Rajshahi") {
-          return "#badd99";
-        } else if (adm1_en== "Chittagong") {
-          return "#dd99ba";
-        }else if (adm1_en == "Sylhet") {
-          return "#115CE9";
-        } else if (adm1_en== "Khulna") {
-          return "#A8A807"; }
-          else {
-          return "#c69540";
-        }
-      }
+      // //GetColor function
+      // function getColor(adm1_en) {
+      //   if (adm1_en == "Dhaka") {
+      //     return "#008080";
+      //   } else if (adm1_en == "Rajshahi") {
+      //     return "#badd99";
+      //   } else if (adm1_en== "Chittagong") {
+      //     return "#dd99ba";
+      //   }else if (adm1_en == "Sylhet") {
+      //     return "#115CE9";
+      //   } else if (adm1_en== "Khulna") {
+      //     return "#A8A807"; }
+      //     else {
+      //     return "#c69540";
+      //   }
+      // }
 
         // $.getJSON("{% url 'bangladeshData' %}", function (data) {
         //     L.geoJSON(data, {
@@ -189,42 +190,18 @@
 // geoserver request
 
 
-
-//dsfsdfsdfs
-// var wmsLayer = L.Geoserver.wms("http://localhost:8080/geoserver/wms", {
-//   // layers: "webgis_101:dhaka",
-//   layers: "webgis_101:Bangladesh",
-// });
-// wmsLayer.addTo(map);
+// wms layer
+// for color full map in geoserver 
+var wmsLayer = L.Geoserver.wms("http://localhost:8080/geoserver/wms", {
+  layers: "webgis_101:irfan_house101",
+});
 
 
-// var wmsLayer_keraniganj = L.Geoserver.wms("http://localhost:8080/geoserver/wms", {
-
-//   layers: "webgis_101:dhaka",
-// });
-// wmsLayer_keraniganj.addTo(map);
 
 
-// var wmsLayer_housing_plot = L.Geoserver.wms("http://localhost:8080/geoserver/wms", {
-
-// layers: "webgis_101:housing_Project",
-// });
-// wmsLayer_housing_plot.addTo(map);
 
 
-//...
-
-// var wfsLayer_bangladesh = L.Geoserver.wfs("http://localhost:8080/geoserver/wfs", {
-//   layers: "webgis_101:Bangladesh",
-//   style: {
-//     color: "red",
-//     fillOpacity: "0",
-//     opacity: "0.5",
-//   },
-// });
-// wfsLayer_bangladesh.addTo(map);
-
-
+//wfs layer
 
 var wfsLayer = L.Geoserver.wfs("http://localhost:8080/geoserver/wfs", {
   layers: "webgis_101:bangladesh_from_db,webgis_101:housing_Project",
@@ -255,13 +232,18 @@ wfsLayer.addTo(map);
 
 //.......
 
+// for color full image and its legend which is wms layer in geoserver
+wmsLayer.addTo(map);
+var layerLegend = L.Geoserver.legend("http://localhost:8080/geoserver/wms", {
+  layers: "webgis_101:irfan_house101",
+  style: `house_irfan101`,
+});
+
+layerLegend.addTo(map);
+
 
 
     </script>
 </body>
 </html>
 
-
-<!-- <a href="page3.html" onclick="newPopup('page2.html');">Click here</a> -->
-
-<!-- <h5><a href="accounts/login/">Details</a></h5> -->
