--- a/templates/index.html
+++ b/templates/index.html
@@ -6,13 +6,10 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-    <link
-    rel="stylesheet"
-    href="https://unpkg.com/leaflet@1.6.0/dist/leaflet.css"
-  />
-  <script src="https://unpkg.com/leaflet@1.6.0/dist/leaflet.js"></script>`
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
-  <script src="{% static 'L.Geoserver.js' %}"></script>
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
 
     <title>Geo Inmormatics</title>
 </head>
@@ -36,12 +33,10 @@
                             <li class="active"><a href="#">Home</a></li>
                             <li><a href="#" class="dropdown-toggle" data-toggle="dropdown">Housing Project <span class="caret"></span></a>
                                 <ul class="dropdown-menu">
-                                    <li><a href="#">About One</a></li>
-                                    <li><a href="#">About Two</a></li>
-                                    <li><a href="#">About Three</a></li>
-                                    <li><a href="#">About Four</a></li>
-                                    <li><a href="#">About Five</a></li>
-                                    <li><a href="#">About Six</a></li>
+                                    <li><a href="/home">Swadesh Properties Ltd</a></li>
+                                    <li><a href="#">Concord Real Estate</a></li>
+                                    <li><a href="#">Nakshi Homes Ltd</a></li>
+
                                 </ul>
                             </li>
                             <li><a href="#">Welcome</a></li>
@@ -76,10 +71,109 @@
             </div>
         </div>
     </div>
-<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
-<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
+
+<div>
+<h1 style="text-align:center">
+    Housing management system
+</h1>
+
+<style>
+body {
+  background: rgb(240, 208, 208);
+}
+
+.cardView{
+  position: absolute;
+  left: 50%;
+  top: 50%;
+  transform: translate(-50%, -50%);
+  
+  /*
+  This doesn't work
+  margin-left: -25%;
+  margin-top: -25%;
+  */
+  
+  width: 40%;
+  height: 50%;
+
+  padding: 20px;  
+  background: rgb(223, 92, 103);
+  color: white;
+  text-align: center;
+  box-shadow: 0 0 30px rgba(0, 0, 0, 0.2);
+}
 
 
+
+
+
+.cardViewForBOX{
+  position: absolute;
+  left: 50%;
+  top: 50%;
+  transform: translate(-50%, -50%);
+  
+  /*
+  This doesn't work
+  margin-left: -25%;
+  margin-top: -25%;
+  */
+  
+  width: 40%;
+  height: 50%;
+
+  padding: 20px;  
+  background: rgb(66, 202, 73);
+  color: white;
+  text-align: center;
+  box-shadow: 0 0 30px rgba(0, 0, 0, 0.2);
+}
+
+
+</style>
+
+<!-- <div class="dropdown-menu">
+    Percentage sized and still centered.
+  </div> -->
+
+
+
+    <div class="dropdown cardViewForBOX">
+        <button class="btn btn-primary dropdown-toggle" type="button" data-toggle="dropdown">Housing project name 
+        <span class="caret"></span></button>
+        
+        <ul class="dropdown-menu cardView">
+          <li style="text-align:center"><a href="/home">Swadesh Properties Ltd</a></li>
+          <li><a href="#">Concord Real Estate</a></li>
+          <li><a href="#">Nakshi Homes Ltd</a></li>
+        </ul>
+      </div>
+
+
+
+
+<!-- .dropdown-menu-center {
+    left: 50% !important;
+    right: auto !important;
+    text-align: center !important;
+    transform: translate(-50%, 0) !important;
+  }
+
+    <div class="container"  style="margin-left: 49%;>
+        <h2>Dropdowns</h2>
+        <div class="dropdown text-center">
+          <button class="btn btn-default dropdown-toggle" type="button" data-toggle="dropdown">Dropdown Example
+          <span class="caret"></span></button>
+          <ul class="dropdown-menu dropdown-menu-center">
+            <li><a href="#">HTML</a></li>
+            <li><a href="#">CSS</a></li>
+            <li><a href="#">JavaScript</a></li>
+            <li class="divider"></li>
+            <li><a href="#">About Us</a></li>
+          </ul>
+        </div>
+    </div> -->
 
 
 
@@ -91,171 +185,6 @@
 
 
 
-
-<style>
-    #map {
-      width: 100%;
-      height: 80vh;
-    }
-  </style>
-<body>
-
-
-    <h1>Sodesh properties</h1>
-    <div id="map"></div>
-
-
-    
-    <script>
-        var map = L.map("map").setView([23.736260, 90.466523], 7);
-  
-        var osm = L.tileLayer(
-          "https://{s}.tile.openstreetmap.org/{z}/{x}/{y}.png",
-          {
-            attribution:
-              "&copy; <a href='https://openstreetmap.org/copyright'> Openstreet map</a> contributors",
-          }
-        );
-  
-        var darkLayer = L.tileLayer(
-          "https://tiles.stadiamaps.com/tiles/alidade_smooth_dark/{z}/{x}/{y}{r}.png",
-          {
-            maminZoom: 1,
-            xZoom: 20,
-            attribution:
-              '&copy; <a href="https://stadiamaps.com/">Stadia Maps</a>, &copy; <a href="https://openmaptiles.org/">OpenMapTiles</a> &copy; <a href="http://openstreetmap.org">OpenStreetMap</a> contributors',
-          }
-        );
-  
-        var watercolor = L.tileLayer(
-          "https://stamen-tiles-{s}.a.ssl.fastly.net/watercolor/{z}/{x}/{y}.{ext}",
-          {
-            attribution:
-              'Map tiles by <a href="http://stamen.com">Stamen Design</a>, <a href="http://creativecommons.org/licenses/by/3.0">CC BY 3.0</a> &mdash; Map data &copy; <a href="https://www.openstreetmap.org/copyright">OpenStreetMap</a> contributors',
-            subdomains: "abcd",
-            minZoom: 1,
-            maxZoom: 16,
-            ext: "jpg",
-          }
-        );
-// For imagery view
-       var mapLink = 
-            '<a href="http://www.esri.com/">Esri</a>';
-       var wholink = 
-            'i-cubed, USDA, USGS, AEX, GeoEye, Getmapping, Aerogrid, IGN, IGP, UPR-EGP, and the GIS User Community';
-        var imagery = L.tileLayer(
-            'http://server.arcgisonline.com/ArcGIS/rest/services/World_Imagery/MapServer/tile/{z}/{y}/{x}', {
-            attribution: '&copy; '+mapLink+', '+wholink,
-            maxZoom: 18,
-            });
-  
-  
-        var baseLayers = {
-          osm: osm,
-          // dark: darkLayer,
-          "water color map": watercolor,
-          "Imagery view" : imagery,
-        };
-  
-        osm.addTo(map);
-        L.control.layers(baseLayers).addTo(map);
-// give color using code on this shape file
-              //Geojson style function
-      // function geojsonStyle(feature) {
-      //   return {
-      //     fillColor: getColor(feature.properties.adm1_en),
-      //     weight: 2,
-      //     opacity: 1,
-      //     color: "#5e380f",
-      //     fillOpacity: 0.7,
-      //   };
-      // }
-
-      // //GetColor function
-      // function getColor(adm1_en) {
-      //   if (adm1_en == "Dhaka") {
-      //     return "#008080";
-      //   } else if (adm1_en == "Rajshahi") {
-      //     return "#badd99";
-      //   } else if (adm1_en== "Chittagong") {
-      //     return "#dd99ba";
-      //   }else if (adm1_en == "Sylhet") {
-      //     return "#115CE9";
-      //   } else if (adm1_en== "Khulna") {
-      //     return "#A8A807"; }
-      //     else {
-      //     return "#c69540";
-      //   }
-      // }
-
-        // $.getJSON("{% url 'bangladeshData' %}", function (data) {
-        //     L.geoJSON(data, {
-        //   onEachFeature: function (feature, layer) {
-        //     layer.bindPopup(
-        //       `<h5>District Name: ${feature.properties.adm2_en}</h5><h5>Region name: ${feature.properties.adm1_en}</h5>`
-        //     );
-        //   },style: geojsonStyle,}).addTo(map);
-        // console.log(data);
-        
-        // });
-
-// geoserver request
-
-
-// wms layer
-// for color full map in geoserver 
-var wmsLayer = L.Geoserver.wms("http://localhost:8080/geoserver/wms", {
-  layers: "webgis_101:try101",
-});
-
-
-
-
-
-
-//wfs layer
-
-var wfsLayer = L.Geoserver.wfs("http://localhost:8080/geoserver/wfs", {
-  layers: "webgis_101:bangladesh_from_db,webgis_101:housing_Project",
-
-  style: {
-    color: "black",
-    fillOpacity: "0",
-    opacity: "0.5",
-  },
- 
-  onEachFeature: function (feature, layer) {
-    // eta speific feature er popup dekhanor jonno
-    if(feature.properties && feature.properties.Plot_No){
-
-
-    layer.bindPopup(
-      `<h5>Area  Amaount SQFT: ${feature.properties.Area_Sqft}</h5>
-      <h5>Katha Amaount: ${feature.properties.Katha}</h5>
-      <h5>Plot Number: ${feature.properties.Plot_No}</h5>
-      <h5><a href="/accounts/login/">Details</a></h5>`
-    );
-
-    }
-  },
-});
-wfsLayer.addTo(map);
-
-
-//.......
-
-// for color full image and its legend which is wms layer in geoserver
-wmsLayer.addTo(map);
-var layerLegend = L.Geoserver.legend("http://localhost:8080/geoserver/wms", {
-  layers: "webgis_101:try101",
-  style: `try104`,
-});
-
-layerLegend.addTo(map);
-
-
-
-    </script>
 </body>
 </html>
 
