--- a/templates/home_sodesh.html
+++ b/templates/home_sodesh.html
@@ -167,41 +167,13 @@ var mapLink =
 
 
 
-
 // wms layer
 // for color full map in geoserver 
-// var wmsLayer = L.Geoserver.wms("http://localhost:8080/geoserver/wms", {
-//   layers: "webgis_101:try_area_k_housing",
+var wmsLayer = L.Geoserver.wms("http://localhost:8080/geoserver/wms", {
+  layers: "webgis_101:try_area_k_housing",
   
-// });
-// wmsLayer.addTo(map);
-
-
-
-// var wfsLayer = L.Geoserver.wfs("http://localhost:8080/geoserver/wfs", {
-//   layers: "webgis_101:try_area_k_housing",
-
-//   style: {
-//     color: "black",
-//     fillOpacity: "0",
-//     opacity: "0.5",
-//   },
- 
-//   onEachFeature: function (feature, layer) {
-//     // eta speific feature er popup dekhanor jonno
-//     if(feature.properties && feature.properties.Plot_No){
-
-
-//     layer.bindPopup(
-//       `<h5>Area  Amaount SQFT: ${feature.properties.Area_Sqft}</h5>
-//       <h5>Katha Amaount: ${feature.properties.Katha}</h5>
-//       <h5>Plot Number: ${feature.properties.Plot_No}</h5>`
-//     );
-
-//     }
-//   },
-// });
-// wfsLayer.addTo(map);
+});
+wmsLayer.addTo(map);
 
 
 
@@ -228,92 +200,9 @@ console.log(data);
 // console.log(data);
 });
 
-// var wfsLayer = L.Geoserver.wfs("http://localhost:8080/geoserver/wfs", {
-//   layers: "	webgis_101:try_area_k_housing",
-
-//   style: {
-//     color: "black",
-//     fillOpacity: "0",
-//     opacity: "0.5",
-//   },
- 
-//   onEachFeature: function (feature, layer) {
-//     // eta speific feature er popup dekhanor jonno
-//     if(feature.properties && feature.properties.Plot_No){
-
-
-//     layer.bindPopup(
-//       `<h5>Area  Amaount SQFT: ${feature.properties.Area_Sqft}</h5>
-//       <h5>Katha Amaount: ${feature.properties.Katha}</h5>
-//       <h5>Plot Number: ${feature.properties.Plot_No}</h5>
-//       <h5>Plot Area Bigha: ${feature.properties.Area_Bigha}</h5>
-//       <h5>Owner Name: ${feature.properties.Owner_Name}</h5>
-//       <h5>Father Name: ${feature.properties.Father__}</h5>
-//       <h5>Spouse Name: ${feature.properties.Spouse_Nam}</h5>
-//       <h5>Area K: ${feature.properties.Area_k}</h5>
-//       <h5>Katha ammount : ${feature.properties.new}</h5>
-//       <h5>Land condition : ${feature.properties.land_cat}</h5>
-//       <h5>Dimension: ${feature.properties.Dimension}</h5>`
-//     );
-
-//     }
-//   },
-// });
-// wfsLayer.addTo(map);
-
-// var layerLegend = L.Geoserver.legend("http://localhost:8080/geoserver/wms", {
-//   layers: "webgis_101:try_area_k_housing",
-//   style: `try_Area_k`,
-// });
-
-// layerLegend.addTo(map);
-// .......
-// function openFullMap() {
-//         map.requestFullscreen();
-//     }
-
-//     $('.print-map').click(function () {
-//         window.print();
-//     })
-
-//     L.control.browserPrint().addTo(map);
-
-      //         //Geojson style function
-      //         function geojsonStyle(feature) {
-      //   return {
-      //     fillColor: getColor(feature.properties.Katha),
-      //     weight: 2,
-      //     opacity: 1,
-      //     color: "#5e380f",
-      //     fillOpacity: 0.7,
-      //   };
-      // }
-
-      // //GetColor function
-      // function getColor(Katha) {
-      //   if (Katha == "3.14511696480288") {
-      //     return "#008080";
-      //   } else if (Katha < 3) {
-      //     return "#badd99";
-      //   }
-      //     else {
-      //     return "#c69540";
-      //   }
-      // }
-
-
-
-      //.......
-
-// for color full image and its legend which is wms layer in geoserver
-
 
 
     </script>
 </body>
 </html>
 
-
-<!-- <a href="page3.html" onclick="newPopup('page2.html');">Click here</a> -->
-
-<!-- <h5><a href="accounts/login/">Details</a></h5> -->
