--- a/templates/home.html
+++ b/templates/home.html
@@ -95,6 +95,46 @@
       width: 90%;
       height: 70vh;
     }
+
+
+
+
+/*Legend specific*/
+.legend {
+  padding: 6px 8px;
+  font: 14px Arial, Helvetica, sans-serif;
+  background: white;
+  background: rgba(255, 255, 255, 0.8);
+  /*box-shadow: 0 0 15px rgba(0, 0, 0, 0.2);*/
+  /*border-radius: 5px;*/
+  line-height: 24px;
+  color: #555;
+}
+.legend h4 {
+  text-align: center;
+  font-size: 16px;
+  margin: 2px 12px 8px;
+  color: #777;
+}
+
+.legend span {
+  position: relative;
+  bottom: 3px;
+}
+
+.legend i {
+  width: 18px;
+  height: 18px;
+  float: left;
+  margin: 0 8px 0 0;
+  opacity: 0.7;
+}
+
+.legend i.icon {
+  background-size: 18px;
+  background-color: rgba(255, 255, 255, 1);
+}
+
   </style>
 <body>
 
@@ -193,7 +233,9 @@ var wfsLayer = L.Geoserver.wfs("http://localhost:8080/geoserver/wfs", {
 
 
     layer.bindPopup(
-      `<h5>Area  Amaount SQFT: ${feature.properties.Area_Sqft}</h5>
+
+      `<h5>Public Information</h5>
+      <h5>Area  Amaount SQFT: ${feature.properties.Area_Sqft}</h5>
       <h5>Katha Amaount: ${feature.properties.Katha}</h5>
       <h5>Plot Number: ${feature.properties.Plot_No}</h5>
       <h5><a href="/accounts/login/">Details</a></h5>`
@@ -297,7 +339,21 @@ function openFullMap() {
 
 // for color full image and its legend which is wms layer in geoserver
 
+/*Legend specific*/
+var legend = L.control({ position: "topleft" });
 
+legend.onAdd = function(map) {
+  var div = L.DomUtil.create("div", "legend");
+  div.innerHTML += "<h4>Legend</h4>";
+  div.innerHTML += '<i style="background: #E42643"></i><span>Sold plot</span><br>';
+  div.innerHTML += '<i style="background: #13a90d"></i><span>Unsold plot </span><br>';
+  div.innerHTML += '<i style="background: #31181d"></i><span>Road</span><br>';
+ 
+
+  return div;
+};
+
+legend.addTo(map);
 
     </script>
 </body>
